[refactor] Used Tocea Scertify to address ~16 days of technical debt semi-automatically
svn path=/trunk/eXist/; revision=18259


Former-commit-id: cc8a7541b8206ec21d5225b90634aa37278ff50a