@@ -50,15 +50,15 @@ public class FloatValue extends NumericValue {
 	
 	public FloatValue(String stringValue) throws XPathException {
 		try {
-			if (stringValue.equals("INF"))
-				value = Float.POSITIVE_INFINITY;
-			else if (stringValue.equals("-INF"))
-				value = Float.NEGATIVE_INFINITY;
-            else if (stringValue.equals("NaN"))
-                value = Float.NaN;
+			if ("INF".equals(stringValue))
+				{value = Float.POSITIVE_INFINITY;}
+			else if ("-INF".equals(stringValue))
+				{value = Float.NEGATIVE_INFINITY;}
+            else if ("NaN".equals(stringValue))
+                {value = Float.NaN;}
 			else
-				value = Float.parseFloat(stringValue);
-		} catch (NumberFormatException e) {
+				{value = Float.parseFloat(stringValue);}
+		} catch (final NumberFormatException e) {
 			throw new XPathException(ErrorCodes.FORG0001, "cannot construct " 
                                      + Type.getTypeName(this.getItemType())
                                      + " from \""
@@ -98,7 +98,7 @@ public class FloatValue extends NumericValue {
 		return s;	
 		*/		
 		
-		FastStringBuffer sb = new FastStringBuffer(20);
+		final FastStringBuffer sb = new FastStringBuffer(20);
 		//0 is a dummy parameter
 		FloatingPointConverter.appendFloat(sb, value).getNormalizedString(0);	
 		return sb.toString();
@@ -129,9 +129,9 @@ public class FloatValue extends NumericValue {
 
 	public boolean hasFractionalPart() {
 		if (isNaN())
-			return false;
+			{return false;}
 		if (isInfinite())
-			return false;
+			{return false;}
 		return new DecimalValue(new BigDecimal(value)).hasFractionalPart();
 	};
 
@@ -165,12 +165,12 @@ public class FloatValue extends NumericValue {
 			case Type.UNSIGNED_BYTE :
 			case Type.POSITIVE_INTEGER :
 				if (!(Float.isInfinite(value) || Float.isNaN(value)))
-					return new IntegerValue((long) value, requiredType);
+					{return new IntegerValue((long) value, requiredType);}
 				else
-					throw new XPathException(ErrorCodes.FOCA0002, "cannot convert ' xs:float(\""
+					{throw new XPathException(ErrorCodes.FOCA0002, "cannot convert ' xs:float(\""
                                              + getStringValue()
                                              + "\")' to "
-                                             + Type.getTypeName(requiredType));
+                                             + Type.getTypeName(requiredType));}
 			case Type.BOOLEAN :
 				return (value == 0.0f || Float.isNaN(value))
 					? BooleanValue.FALSE
@@ -213,12 +213,12 @@ public class FloatValue extends NumericValue {
 	 */
 	public NumericValue round() throws XPathException {
 
-		if (Float.isNaN(value) || Float.isInfinite(value) || value==0.0) return this;
+		if (Float.isNaN(value) || Float.isInfinite(value) || value==0.0) {return this;}
 
-        if (value >= -0.5 && value < 0.0) return new DoubleValue(-0.0);
+        if (value >= -0.5 && value < 0.0) {return new DoubleValue(-0.0);}
         
         if (value > Integer.MIN_VALUE && value < Integer.MAX_VALUE)
-            return new FloatValue((float)Math.round(value));
+            {return new FloatValue((float)Math.round(value));}
 
         //too big return original value unchanged
         return this;
@@ -228,9 +228,9 @@ public class FloatValue extends NumericValue {
 	 * @see org.exist.xquery.value.NumericValue#round(org.exist.xquery.value.IntegerValue)
 	 */
 	public NumericValue round(IntegerValue precision) throws XPathException {
-		if (precision == null) return round();
+		if (precision == null) {return round();}
 
-		if (Float.isNaN(value) || Float.isInfinite(value) || value==0.0) return this;
+		if (Float.isNaN(value) || Float.isInfinite(value) || value==0.0) {return this;}
 		
 		/* use the decimal rounding method */
 		return (FloatValue) ((DecimalValue) convertTo(Type.DECIMAL)).round(precision).convertTo(Type.FLOAT);
@@ -241,9 +241,9 @@ public class FloatValue extends NumericValue {
 	 */
 	public ComputableValue minus(ComputableValue other) throws XPathException {
 		if (Type.subTypeOf(other.getType(), Type.FLOAT))
-			return new FloatValue(value - ((FloatValue) other).value);
+			{return new FloatValue(value - ((FloatValue) other).value);}
 		else
-			return minus((ComputableValue) other.convertTo(getType()));
+			{return minus((ComputableValue) other.convertTo(getType()));}
 	}
 
 	/* (non-Javadoc)
@@ -251,9 +251,9 @@ public class FloatValue extends NumericValue {
 	 */
 	public ComputableValue plus(ComputableValue other) throws XPathException {
 		if (Type.subTypeOf(other.getType(), Type.FLOAT))
-			return new FloatValue(value + ((FloatValue) other).value);
+			{return new FloatValue(value + ((FloatValue) other).value);}
 		else
-			return plus((ComputableValue) other.convertTo(getType()));
+			{return plus((ComputableValue) other.convertTo(getType()));}
 	}
 
 	/* (non-Javadoc)
@@ -278,39 +278,39 @@ public class FloatValue extends NumericValue {
 		if (Type.subTypeOf(other.getType(), Type.NUMBER)) {
 			//Positive or negative zero divided by positive or negative zero returns NaN.
 			if (this.isZero() && ((NumericValue)other).isZero())
-				return NaN;
+				{return NaN;}
             
 			//A negative number divided by positive zero returns -INF.
 			if (this.isNegative()  && 
                     ((NumericValue)other).isZero() && ((NumericValue)other).isPositive())
-				return NEGATIVE_INFINITY;
+				{return NEGATIVE_INFINITY;}
             
 			//A negative number divided by positive zero returns -INF.
 			if (this.isNegative()  && 
                     ((NumericValue)other).isZero() && ((NumericValue)other).isNegative())
-				return POSITIVE_INFINITY;        
+				{return POSITIVE_INFINITY;}        
             
 			//Division of Positive by negative zero returns -INF and INF, respectively. 
 			if (this.isPositive()  && 
                     ((NumericValue)other).isZero() && ((NumericValue)other).isNegative())
-				return NEGATIVE_INFINITY;
+				{return NEGATIVE_INFINITY;}
             
 			if (this.isPositive()  &&
                     ((NumericValue)other).isZero() && ((NumericValue)other).isPositive())
-				return POSITIVE_INFINITY;
+				{return POSITIVE_INFINITY;}
             
 			//Also, INF or -INF divided by INF or -INF returns NaN.
 			if (this.isInfinite() && ((NumericValue)other).isInfinite())
-				return NaN;
+				{return NaN;}
 		}
 		if (Type.subTypeOf(other.getType(), Type.FLOAT))
-			return new FloatValue(value / ((FloatValue) other).value);
+			{return new FloatValue(value / ((FloatValue) other).value);}
 		else
-			return div((ComputableValue) other.convertTo(getType()));
+			{return div((ComputableValue) other.convertTo(getType()));}
 	}
 
 	public IntegerValue idiv(NumericValue other) throws XPathException {
-		ComputableValue result = div(other);
+		final ComputableValue result = div(other);
 		return new IntegerValue(((IntegerValue)result.convertTo(Type.INTEGER)).getLong());		
 		/*
 		if (Type.subTypeOf(other.getType(), Type.FLOAT)) {
@@ -328,9 +328,9 @@ public class FloatValue extends NumericValue {
 	 */
 	public NumericValue mod(NumericValue other) throws XPathException {
 		if (Type.subTypeOf(other.getType(), Type.FLOAT))
-			return new FloatValue(value % ((FloatValue) other).value);
+			{return new FloatValue(value % ((FloatValue) other).value);}
 		else
-			return mod((NumericValue) other.convertTo(getType()));
+			{return mod((NumericValue) other.convertTo(getType()));}
 	}
 
 	/* (non-Javadoc)
@@ -345,16 +345,16 @@ public class FloatValue extends NumericValue {
 	 */
 	public AtomicValue max(Collator collator, AtomicValue other) throws XPathException {
 		if (Type.subTypeOf(other.getType(), Type.FLOAT))
-			return new FloatValue(Math.max(value, ((FloatValue) other).value));
+			{return new FloatValue(Math.max(value, ((FloatValue) other).value));}
 		else
-			return convertTo(other.getType()).max(collator, other);
+			{return convertTo(other.getType()).max(collator, other);}
 	}
 
 	public AtomicValue min(Collator collator, AtomicValue other) throws XPathException {
 		if (Type.subTypeOf(other.getType(), Type.FLOAT))
-			return new FloatValue(Math.min(value, ((FloatValue) other).value));
+			{return new FloatValue(Math.min(value, ((FloatValue) other).value));}
 		else
-			return convertTo(other.getType()).min(collator, other);
+			{return convertTo(other.getType()).min(collator, other);}
 	}
 
 	/* (non-Javadoc)
@@ -362,25 +362,25 @@ public class FloatValue extends NumericValue {
 	 */
 	public int conversionPreference(Class<?> javaClass) {
 		if (javaClass.isAssignableFrom(FloatValue.class))
-			return 0;
+			{return 0;}
 		if (javaClass == Long.class || javaClass == long.class)
-			return 3;
+			{return 3;}
 		if (javaClass == Integer.class || javaClass == int.class)
-			return 4;
+			{return 4;}
 		if (javaClass == Short.class || javaClass == short.class)
-			return 5;
+			{return 5;}
 		if (javaClass == Byte.class || javaClass == byte.class)
-			return 6;
+			{return 6;}
 		if (javaClass == Double.class || javaClass == double.class)
-			return 2;
+			{return 2;}
 		if (javaClass == Float.class || javaClass == float.class)
-			return 1;
+			{return 1;}
 		if (javaClass == String.class)
-			return 7;
+			{return 7;}
 		if (javaClass == Boolean.class || javaClass == boolean.class)
-			return 8;
+			{return 8;}
 		if (javaClass == Object.class)
-			return 20;
+			{return 20;}
 
 		return Integer.MAX_VALUE;
 	}
@@ -393,9 +393,9 @@ public class FloatValue extends NumericValue {
 		if (target.isAssignableFrom(FloatValue.class)) {
 			return (T)this;
                 } else if (target == Double.class || target == double.class) {
-			return (T)new Double(value);
+			return (T)Double.valueOf(value);
                 } else if (target == Float.class || target == float.class) {
-			return (T)new Float(value);
+			return (T)Float.valueOf(value);
                 } else if (target == Long.class || target == long.class) {
 			return (T)Long.valueOf( ((IntegerValue) convertTo(Type.LONG)).getValue() );
 		} else if (target == Integer.class || target == int.class) {
@@ -408,9 +408,9 @@ public class FloatValue extends NumericValue {
 			final IntegerValue v = (IntegerValue) convertTo(Type.BYTE);
 			return (T)Byte.valueOf((byte) v.getValue());
 		} else if (target == String.class)
-			return (T)getStringValue();
+			{return (T)getStringValue();}
 		else if (target == Boolean.class)
-			return (T)Boolean.valueOf(effectiveBooleanValue());
+			{return (T)Boolean.valueOf(effectiveBooleanValue());}
 
 		throw new XPathException(
 			"cannot convert value of type "
@@ -425,9 +425,9 @@ public class FloatValue extends NumericValue {
     public int compareTo(Object o) {
         final AtomicValue other = (AtomicValue)o;
         if(Type.subTypeOf(other.getType(), Type.FLOAT))
-            return Float.compare(value, ((FloatValue)other).value);
+            {return Float.compare(value, ((FloatValue)other).value);}
         else
-            return getType() < other.getType() ? Constants.INFERIOR : Constants.SUPERIOR;
+            {return getType() < other.getType() ? Constants.INFERIOR : Constants.SUPERIOR;}
     }
 
     @Override
